--- a/react/src/index.css
+++ b/react/src/index.css
@@ -1,3 +1,19 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+body {
+  @apply p-0 m-0;
+  background-color: #090d15;
+}
+
+@layer base {
+  @layer base {
+    @font-face {
+      font-family: "Source Code Pro", serif;
+      font-optical-sizing: auto;
+      font-display: swap;
+      src: url(https://fonts.googleapis.com/css2?family=Source+Code+Pro:ital,wght@0,200..900;1,200..900&display=swap)
+        format("woff2");
+    }
+  }
+}
